# adl4cv

./: .gitignore  NOTES.md  README.md  Understanding_nanoGPT.ipynb  ae_approach.ipynb  create_plots.py  create_plots_mnist.py  dataset_demo.ipynb  dataset_demo_DWSNets.ipynb  get_run_wandb.py  grvq_ae_approach.ipynb  image-58828_model_final.pth  inspect_planes.py  inspect_shapenet_weights.ipynb  naive_approach.ipynb  naive_tokenized_approach.ipynb  naive_tokenized_approach_shapenet.ipynb  notes.org  optimize_metrics.py  performance_models.pth  pyproject.toml  requirements.txt  shapenet.ipynb  shapenet_ae.ipynb  shapenet_transformer_ae.ipynb  test_metrics.ipynb  train.ipynb  train_ae_for_nef.ipynb  train_grq_shapenet.py  train_grq_shapenet_learnable.py  train_regression_transformer_mnist.ipynb  train_rq_shapenet.py  train_rq_shapenet_learnable.py  train_shapenet_ae.ipynb  train_transformer_mnist.ipynb  train_transformer_shapenet.ipynb  train_vq.py  train_vq_shapenet.py  visualize_model.ipynb  visualize_weights.py  (+3 more)
adl4cd_env/: pyproject.toml
animation/: create_animated_distribution.py  get_mnist_gt.py  inference_animation.py  metrics_inspect.ipynb  optimize_metrics.py  util.py  visualization_nef_training.py  visualization_nef_training_mnist.py  visualization_nef_training_shapenet.py  visualization_regression_transformer.py  visualize_ground_truth.py  visualize_model.ipynb  visualize_regression_transformer_learning.py  visualize_weight_shift.py
data/: DWSNets_dataset.py  base_dataset.py  hdf5_dataset.py  nef_mnist_dataset.py  nef_shapenet_dataset.py  neural_field_arena_dataset.py  neural_field_datasets.py  neural_field_datasets_shapenet.py  pointcloud_dataset.py
experiments/: regression_transformer_structure.py
generation/: get_pointclouds.py  permutated_and_visualize.py  train-mnist.py  train_mnist.py  train_mnist_nef.py  train_nerf.py  train_sdf.py  train_shapenet.py  train_shapenet_nef.py  training_structured.ipynb  visualization.py  visualization_clip.py  visualization_presentation.py  visualize_weight_shift.py
models/: README.md  ckpt.pt  ckpt.pth  final_model.pth  model_epoch_0.pth  model_epoch_1.pth  model_epoch_149.pth  model_epoch_199.pth  model_epoch_2.pth  model_epoch_249.pth  model_epoch_299.pth  model_epoch_349.pth  model_epoch_399.pth  model_epoch_449.pth  model_epoch_49.pth  model_epoch_499.pth  model_epoch_99.pth  naive_regressioin_512_big.pt  naive_regression_2_big.pt  naive_regression_many_samples.pt  naive_regression_single_sample.pt  naive_regression_two_samples.pt  train_metrics.csv  train_metrics_z_score.csv  train_metrics_z_score.tex  val_metrics.csv  val_metrics_z_score.csv
networks/: INR.py  grvq_ae.py  matrix_vq_vae.py  mlp_models.py  naive_rq_ae.py  naive_rq_vae.py  nano_gpt.py  nano_gpt_adapted.py  regression_transformer.py  (+6 more)
(+91 files in other folders)
