[tool.poetry]
name = "adl4cv"
version = "0.1.0"
description = ""
authors = ["go98zoh <go98zoh@mytum.de>", "go68vog <go68vog@mytum.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.2"
numpy = "1.26.4"
tqdm = "^4.66.2"
h5py = "^3.11.0"
matplotlib = "^3.8.4"
notebook = "^7.1.3"
torchinfo = "^1.8.0"
tensorboard = "^2.16.2"
transformers = "^4.40.2"
wandb = "^0.16.6"
scikit-learn = "^1.4.2"
vector-quantize-pytorch = "^1.14.24"
random-fourier-features-pytorch = "^1.0.1"
munch = "^4.0.0"
opencv-python = "^4.9.0.80"
plotly = "^5.22.0"
imageio = "^2.34.1"
pyqt6 = "^6.7.0"
torchmetrics = "^1.4.0.post0"
plyfile = "^1.0.3"
scikit-image = "^0.24.0"
gdown = "^5.2.0"
torch = { path = "torch-2.1.2+rocm6.0-cp310-cp310-linux_x86_64.whl" }
torchvision = { path = "torchvision-0.16.1+rocm6.0-cp310-cp310-linux_x86_64.whl" }
trimesh = "^4.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
